initChannelHolders new logic; removed duplication